# type-curve-analysis

./: README.md  pyproject.toml
docs/: agarwal70_figure_1.py  agarwal70_table_3.py  agarwal70_table_4.py  agarwal70_table_5.py  agarwal70_table_6.py  agarwal70_table_7.py  agarwal70_table_8.py  agarwal70_table_9.py  buildup_test.py  everdingen49_figure_6.py  everdingen49_table_1.py  single_well_pressure.py  type_curves_analytical.py  type_curves_numerical.py  type_curves_numerical_2.py
typex/: _grid_radial.py  _numerical.py  _typecurve.py
