[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typex"
version = "0.0.1"
readme = "README.md"
dependencies = [
  "numpy>=1.26.4",
  "scipy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["typex*"]
namespaces = true
